# mirrors-edge-headtracking

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md  pixi.toml
.github/workflows/: build.yml  release.yml
assets/: MirrorsEdgeHeadTracking.ini
scripts/: deploy.ps1  fast-debug-movies.ps1  install.cmd  package-release.ps1  release-nightly.ps1  release.ps1  uninstall.cmd  update-deps.ps1
src/: build_profiles.cpp  build_profiles.h  camera_hook.cpp  camera_hook.h  camera_probe.cpp  camera_probe.h  config.cpp  config.h  dllmain.cpp  framerate.cpp  framerate.h  mod.cpp  mod.h  pov_layout.h  reticle_overlay.cpp  reticle_overlay.h  version.h
